# ESP32-IR-CEC-Alternative

./: .gitignore  Project Outline.md
DEPRECATED Component test/: platformio.ini
DEPRECATED Component test/src/: main.cpp
HID test/firmware/: platformio.ini
HID test/firmware/src/: main.cpp
HID test/pc-test/: CMakeLists.txt
HID test/pc-test/src/: main.cpp
daemon/: CMakeLists.txt  esp32-ir-remote.service
daemon/archive/: SerialTransport.cpp
daemon/src/: HIDTransport.cpp  HIDTransport.h  IPowerMonitor.h  ITransport.h  LinuxPowerMonitor.cpp  LinuxPowerMonitor.h  SerialTransport.h  WindowsPowerMonitor.cpp  WindowsPowerMonitor.h  main.cpp
firmware/: platformio.ini
firmware/data/: index.html
firmware/src/: Button.cpp  Button.h  Display.cpp  Display.h  Profiles.cpp  Profiles.h  main.cpp
